--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="date__of__birth"><span></span></div>
         <div class="btn">
           <button id="btn__letter">
-            Click here Dinaa
+            Click here Simran💕
             <i class="fa-regular fa-envelope"></i>
           </button>
         </div>
@@ -61,11 +61,11 @@
       <div class="right">
         <div class="box__account">
           <div class="image">
-            <img src="r5.png" alt="" />
+            <img src="simran.png" alt="" />
           </div>
           <div class="name">
             <i class="fa-solid fa-heart"></i>
-            <span>Dinaaaa</span>
+            <span>Simran💕💕💕</span>
             <i class="fa-solid fa-heart"></i>
           </div>
           <div class="balloon_one">
@@ -162,14 +162,14 @@
 
   <div id="copy">
     <p class="text-center text-white text-sm">
-      OG Creator <a href="https://www.instagram.com/aoudumber.dev/reels/#">@aoudumber.dev</a>
+      Created with love by Shiurya Raj
     </p>
   </div>
 
   <script>
-    let datetxt = "5 April 1996";
+    let datetxt = "6th October 2010";
     let datatxtletter =
-      "Dear Dina. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
+      "Dear Simran. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
